2008-09-10  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/package-info-cell-renderer.c:
	(package_info_cell_renderer_set_property): Deal with NULL pixbufs.

	Include repository in package details.

	* src/main.h (struct package_info): Added repository field.
	* src/apt-worker-proto.h: New field in response.
	* src/apt-worker.cc (cmd_get_package_details): Find repository and
	include it in response.
	* src/details.cc (spd_get_details_reply): Retireve repository from
	response.
	* src/details.cc (spd_update_common_page): Show repository.

2008-09-08  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/main.cc (MENU_HACK): New define to place the menu in the
	toolbar.
	(create_toolbar): Create menu button.
	(main): Attach menu to toolbar buttons.

2008-09-03  Marius Vollmer  <marius.vollmer@nokia.com>

	Make maemo-select-menu-location do nothing.

	* utils/Makefile.am: Don't use the launcher for
	maemo-select-menu-location.
	* maemo-select-menu-location (main): Just print warning and exit.
	Removed all the rest.

	Removed the 'essential' flag for catalogues.

	* src/repo.h: remove the essential tag documentation
	* src/repo.cc: (reformat) subs spaces for tabs
	(is_read_only_entry): function removed
	(cat_edit_response): use the the readonly flag for enabled/disable
	buttons
	(show_cat_edit_dialog): the readonly flag doesn't care for the
	dialog buttons, use the flag instead of the removed function
	(cat_selection_changed): simplify the boolean operation for
	sensitivity.
	(make_catcache_from_xexp): activation of the readonly flag

2008-08-29  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/operations.cc (ip_reboot_now, ip_flash_and_reboot_reply):
	Make sure that the interaction flow ends eventually even if the
	reboot does not happen.

	* src/util.cc (get_https_proxy): Fall back to "https_proxy"
	envvar.

	* src/settings.cc: Make red_pill_show_all and
	red_pill_show_magic_sys default to false.

2008-08-28  Marius Vollmer  <marius.vollmer@nokia.com>
